# developer-portfolio

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dioxus.toml  Dockerfile  README.md  clippy.toml  docker-compose.yml  i.html  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: docker-build-push.yml
app/: Cargo.toml  Dioxus.toml  build.rs  globals.css  index.html  input.css  layout.tsx  page.tsx  tailwind.css
app/assets/: matomo_tag.js  tailwind.css
app/contact/: page.tsx
app/projects/: page.tsx
app/src/: lib.rs  main.rs  router.rs
app/src/layout/: footer.rs  header.rs  section_title.rs
app/src/pages/: contact.rs  home.rs  not_found.rs  projects.rs  story.rs
app/story/: page.tsx
components/layout/: footer.tsx  header.tsx
components/ui/: section-title.tsx
constants/: data.tsx
src/: constants.rs  icons.rs  lib.rs  main.rs  router.rs
src/components/: layout.rs  ui.rs
src/layout/: mod.rs  section_title.rs
src/pages/: contact.rs  home.rs  mod.rs  projects.rs  story.rs
style/: globals.css
