[workspace.package]
authors = ["Jeremy Meek"]
description = ""
edition = "2024"
license = ""
repository = ""

[workspace]
members = ["app"]
resolver = "2"

[profile.dev.package."*"]
codegen-units = 1
debug = false
incremental = false
opt-level = "z"
strip = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = "z"
panic = "abort"
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[workspace.dependencies]
anyhow = "1.0.98"
dioxus = { git = "https://github.com/Distortedlogic/dioxus.git", branch = "asset-link-section-preservation", default-features = false }
dioxus-free-icons = { git = "https://github.com/Distortedlogic/dioxus-free-icons.git", branch = "forked", features = [
  "bootstrap",
  "feather",
  "font-awesome-brands",
  "font-awesome-regular",
  "font-awesome-solid",
  "hero-icons-outline",
  "hero-icons-solid",
  "ionicons",
  "lucide",
  "material-design-icons-action",
  "material-design-icons-alert",
  "material-design-icons-av",
  "material-design-icons-communication",
  "material-design-icons-content",
  "material-design-icons-device",
  "material-design-icons-editor",
  "material-design-icons-file",
  "material-design-icons-hardware",
  "material-design-icons-home",
  "material-design-icons-image",
  "material-design-icons-maps",
  "material-design-icons-navigation",
  "material-design-icons-notification",
  "material-design-icons-places",
  "material-design-icons-social",
  "material-design-icons-toggle",
  "octicons",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tailwind_fuse = { version = "0.3.2", features = ["variant"] }
validator = { version = "0.20.0", features = ["derive"] }
