[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "app"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
dioxus = { workspace = true, features = ["default", "fullstack", "router"] }
dioxus-free-icons = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tailwind_fuse = { workspace = true }
validator = { workspace = true }

axum-prometheus = { version = "0.8.0", optional = true }

[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }

[features]
server = ["dep:axum-prometheus", "dioxus/server"]
web = ["dioxus/web"]
