[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "app"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
dioxus = { workspace = true, features = ["default", "fullstack", "router"] }
dioxus-free-icons = { workspace = true }
tailwind_fuse = { workspace = true }


[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }

[features]
default = ["web"]
server = ["dioxus/server"]
web = ["dioxus/web"]
